Bug 170524 - Text cut off in spell check dialog
Summary: Text cut off in spell check dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.2.0.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:26.8.0 target:26.2.1 target:25...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Spell-Checking-Dialog
  Show dependency treegraph
 
Reported: 2026-01-29 08:21 UTC by Samuel Mehrbrodt
Modified: 2026-02-22 21:43 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Bugdoc (26.28 KB, application/vnd.oasis.opendocument.text)
2026-01-29 08:21 UTC, Samuel Mehrbrodt
Details
Screenshot (32.36 KB, image/png)
2026-01-29 08:21 UTC, Samuel Mehrbrodt
Details
Truncation examples (532.12 KB, image/png)
2026-01-29 18:12 UTC, nutka
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Mehrbrodt 2026-01-29 08:21:09 UTC
Created attachment 205253 [details]
Bugdoc

1. Open bugdoc with a long mis-spelled sentence
2. Open spell check dialog

Expected:
Text is fully visible

Actual:
Some words are cut off / hidden by the scroll bar.

Seen on Windows 11.
Comment 1 Samuel Mehrbrodt 2026-01-29 08:21:39 UTC
Created attachment 205254 [details]
Screenshot
Comment 2 nutka 2026-01-29 18:11:03 UTC
On Windows 11, text truncation already occurred in earlier versions of LibreOffice.
Comment 3 nutka 2026-01-29 18:12:00 UTC
Created attachment 205262 [details]
Truncation examples
Comment 4 m_a_riosv 2026-01-30 12:33:51 UTC
Reproducible
Version: 25.8.4.2 (X86_64)
Build ID: 290daaa01b999472f0c7a3890eb6a550fd74c6df
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded

but seems it's fine with
Version: 26.2.0.2 (X86_64)
Build ID: 620(Build:2)
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded
Comment 5 Gabor Kelemen (Collabora) 2026-02-02 09:53:16 UTC
I can still reproduce this issue on Win 10, with current nightly:

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 680(Build:0)
CPU threads: 24; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

...anyways, this is build from 2026-01-29 18:22:15

Trick is to place the cursor at the last sentence, "Traduit avec DeepLcom" before pressing F7.
Then press "Ignore once" on the words and choose to continue checking from the beginning of document.

Then the long paragraphs words will be truncated still.
Comment 6 Gabor Kelemen (Collabora) 2026-02-02 09:58:32 UTC
Seems to have started in 24.2, before this text preview box did not have scrollbars.
Comment 7 Gabor Kelemen (Collabora) 2026-02-02 14:55:58 UTC
Seems to have started with:

https://git.libreoffice.org/core/+/43677cb0d95de06bea0f08e87ccfa3230dc8bd6b

commit 43677cb0d95de06bea0f08e87ccfa3230dc8bd6b	[log]
author	Caolán McNamara <caolan.mcnamara@collabora.com>	Tue Sep 12 13:22:04 2023 +0100
committer	Caolán McNamara <caolan.mcnamara@collabora.com>	Tue Sep 12 15:23:36 2023 +0200
tree 967fae9dbe70b41f42dc23746a026c658f996461
parent 1d76dccefa895c251bdcc612c046b42aef61a34b [diff]

Resolves: tdf#157148 spelling dialog sentence box has no scrollbars

Seems to affect only Windows. Before the regression of the above bug, in 6.0 the scrollbar did not overlap the text.
Comment 8 Caolán McNamara 2026-02-04 13:49:55 UTC
(In reply to Gabor Kelemen (Collabora) from comment #5)
> Trick is to place the cursor at the last sentence, "Traduit avec DeepLcom"
> before pressing F7....

What I believe is happening is that with that short sentence the scrollbar isn't needed so the optimal size doesn't include it. When it wraps around, then it does need a scrollbar is needed and then there isn't enough room in the dialog for it so the textarea gives way and becomes obscured.

I imagine the reordering of events in:

commit 94442bd94e504b067efd0b992525b53fc660f114
Date:   Tue Aug 5 11:07:25 2025 +0200

    tdf#163802 a11y: Fully initialize SpellDialog before showing

might be why the start state changed between versions to make the original case in comment #1 work
Comment 9 Commit Notification 2026-02-04 17:32:04 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c23731b40ee1ddef1b54e7c5c1876d38169cb6c9

Resolves: tdf#170524 Lock in the start size request including scrollbar width

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2026-02-04 17:33:19 UTC
Backports to upstream 26-2 and 25-8 in gerrit
Comment 11 Commit Notification 2026-02-04 19:34:32 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/f9fe831af976fe1883c743f4672514eb804fdcef

Resolves: tdf#170524 Lock in the start size request including scrollbar width

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2026-02-22 21:43:18 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/b5fbac5fc4005772f0ba5164549f3807d1dd00f4

Resolves: tdf#170524 Lock in the start size request including scrollbar width

It will be available in 25.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.