Resolves: tdf#170524 Lock in the start size request including scrollbar width

Turn vertical scrollbar on by default, at dialog start measure width
including the vertical scrollbar that might be needed later in the
lifetime of the dialog even if it doesn't need it at startup time and
lock that width in as the widget size request.

That way it the scrollbar is needed later there is space for it without
obscuring the text area.

Change-Id: If4ad912d3d6eb6650ae1c891ffd7fdbbf12c0c39
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198687
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Jenkins