cui/source/inc/SpellDialog.hxx
@@ -70,6 +70,7 @@ private:
 
     void DoScroll();
     void SetScrollBarRange();
+    void SetSizeRequest();
 
 protected:
     virtual bool    KeyInput( const KeyEvent& rKEvt ) override;
